@@ -1,3 +1,3 @@
-EBUILD exalt-9999.ebuild 798 RMD160 099512d13771aabbf6dc02008ad93c1b66d9eda5 SHA1 3c3271f74aabf9c585947eda49cb3745b3e5de5e SHA256 f57107bc8dabf7c208e5bcf4d035ef6d115efe527b5d3771658255b0f4f7f257
-MISC ChangeLog 385 RMD160 8981f862d80cda0f52038cd5596f225550119205 SHA1 a793bf78c277b71c99fdbc749d11b9d2a1ee5852 SHA256 af3eab009dbcbe909742d4016bfdfa8e75232b4d53ac614322812821aab37ecb
-MISC metadata.xml 464 RMD160 5c78a95ad07d28005409c9d4231128c228a274a9 SHA1 b784f3b8177cfd95bb11b280df85549409d16e0b SHA256 f8a4f0b397a629720937ea77ed75954466a93e21659bc82fc79ef58516d4e6a9
+EBUILD exalt-9999.ebuild 818 RMD160 75291d7ebb29b10b8d0a8ca1563f8dbf554774bd SHA1 ba6a06dd8d4a0fc18c02d1b5e5526430e4204ebc SHA256 f38b41930f1a283cdd4f05d707a7d26b1d6c0f11b49329e314e280efc324f20a
+MISC ChangeLog 558 RMD160 888ecda56070f7d3ea31113e7291b02b881a82f7 SHA1 ae386e52177ca0ba834ec7fe352be0b5679a420e SHA256 f6e1e525b088a8188cffa182e95e82d204f72a3ce4f0962cc0a2aa0f92a7fe58
+MISC metadata.xml 662 RMD160 a0d4bc46b106105356db0dcc1706a071642561df SHA1 985577758034596aea0a70714a15e8f9bdb80d42 SHA256 adc6e2f445d2142fc06e1249b678a6a01a05194881c7afec4caf5eec9f95fc43
